deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: user-service-deploy
   labels:
      app: user-service
      env: dev
      owner: DmitryAvdonin
spec:
   replicas: 2
   selector:
      matchLabels:
         project: adv
   strategy:
      type: RollingUpdate
      rollingUpdate:
         maxUnavailable: 1
         maxSurge: 1
   template:
      metadata:
         labels:
            project: adv
      spec:
         containers:
            - name: user-service
              image: dmitryavdonin/user_service:latest
              ports:
                 - containerPort: 8000
